--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@
 *.suo
 *.opensdf
 *.sdf
+
+#C-sharp
 *.config
 *.csproj
 *.manifest
@@ -29,6 +31,9 @@
 Dependencies/
 WorkingDir/AssemblyFiles
 WorkingDir/Bin
+
+#C-sharp
+WorkingDir/Assembly
 FlyGameProjects/ipch
 FlyGameProjects/FlyEditUI/obj
 FlyGameProjects/FlyEditUI/Properties
