--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,18 @@
 *.suo
 *.opensdf
 *.sdf
+
+#C-sharp
+*.config
+*.csproj
+*.manifest
+
 Dependencies/
 WorkingDir/AssemblyFiles
 WorkingDir/Bin
+
+#C-sharp
+WorkingDir/Assembly
 FlyGameProjects/ipch
+FlyGameProjects/FlyEditUI/obj
+FlyGameProjects/FlyEditUI/Properties
