Updated editor and some other stuff

--- a/FlyGameProjects/FlyEditUI/FlyEditUI.csproj
+++ b/FlyGameProjects/FlyEditUI/FlyEditUI.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,29 +47,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EventHandler.cs">
+    <Compile Include="Forms\EventHandler.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="LevelGenerator.cs" />
-    <None Include="Settings.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Forms\WinMessage.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <None Include="Settings.cs" />
+    <Compile Include="Forms\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="OutputWindow.cs">
+    <Compile Include="Forms\OutputWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="OutputWindow.Designer.cs">
+    <Compile Include="Forms\OutputWindow.Designer.cs">
       <DependentUpon>OutputWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
+    <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="OutputWindow.resx">
+    <EmbeddedResource Include="Forms\OutputWindow.resx">
       <DependentUpon>OutputWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
