--- a/FlyGameProjects/FlyEdit++CLI/FlyEdit++CLI.vcxproj
+++ b/FlyGameProjects/FlyEdit++CLI/FlyEdit++CLI.vcxproj
@@ -86,6 +86,7 @@
     <TargetExt>.dll</TargetExt>
     <LibraryPath>$(LibraryPath)</LibraryPath>
     <LinkIncremental>true</LinkIncremental>
+    <OutDir>$(SolutionDir)..\WorkingDir\Bin\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -103,6 +104,7 @@
     <TargetExt>.dll</TargetExt>
     <LibraryPath>$(LibraryPath);$(SolutionDir)..\WorkingDir\Bin</LibraryPath>
     <LinkIncremental>false</LinkIncremental>
+    <OutDir>$(SolutionDir)..\WorkingDir\Bin\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
