--- a/FlyGameProjects/FlyGameEngine/FlyGameEngine.vcxproj
+++ b/FlyGameProjects/FlyGameEngine/FlyGameEngine.vcxproj
@@ -19,6 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Core\DrawableTexture.cpp" />
+    <ClCompile Include="Core\Light\PointLight.cpp" />
     <ClCompile Include="Core\Mesh\Terrain.cpp" />
     <ClCompile Include="Core\BaseBuffer.cpp" />
     <ClCompile Include="Core\BaseShader.cpp" />
@@ -35,9 +37,12 @@
     <ClCompile Include="Core\Mesh\ObjectMaterial.cpp" />
     <ClCompile Include="Core\Mesh\Plane.cpp" />
     <ClCompile Include="Core\RasterizerState.cpp" />
-    <ClCompile Include="Core\Render\ColorShader.cpp" />
+    <ClCompile Include="Core\Render\BlurShader.cpp" />
+    <ClCompile Include="Core\Render\FinalShader.cpp" />
+    <ClCompile Include="Core\Render\GBufferAnimationShader.cpp" />
     <ClCompile Include="Core\Render\GBufferShader.cpp" />
     <ClCompile Include="Core\Render\LightShader.cpp" />
+    <ClCompile Include="Core\Render\ShadowMapShader.cpp" />
     <ClCompile Include="Core\SamplerState.cpp" />
     <ClCompile Include="Core\ShaderHandler.cpp" />
     <ClCompile Include="Core\Texture2D.cpp" />
@@ -61,7 +66,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core\D3DxLink.h" />
+    <ClInclude Include="Core\DrawableTexture.h" />
+    <ClInclude Include="Core\Light\PointLight.h" />
     <ClInclude Include="Core\Mesh\Terrain.h" />
+    <ClInclude Include="Core\Render\BlurShader.h" />
+    <ClInclude Include="Core\Render\FinalShader.h" />
+    <ClInclude Include="Core\Render\GBufferAnimationShader.h" />
+    <ClInclude Include="Core\Render\ShadowMapShader.h" />
     <ClInclude Include="FlyEngine\FlyEngine.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</ExcludedFromBuild>
@@ -90,7 +101,6 @@
     <ClInclude Include="Core\Mesh\ObjectMaterial.h" />
     <ClInclude Include="Core\Mesh\Plane.h" />
     <ClInclude Include="Core\RasterizerState.h" />
-    <ClInclude Include="Core\Render\ColorShader.h" />
     <ClInclude Include="Core\Render\GBufferShader.h" />
     <ClInclude Include="Core\Render\LightShader.h" />
     <ClInclude Include="Core\SamplerState.h" />
@@ -121,26 +131,26 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
     <PlatformToolset>v100</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
     <PlatformToolset>v100</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
     <PlatformToolset>v100</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
