--- a/FlyGameProjects/FlyEditUI/FlyEditUI.csproj
+++ b/FlyGameProjects/FlyEditUI/FlyEditUI.csproj
@@ -9,9 +9,8 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>FlyEditUI</RootNamespace>
     <AssemblyName>FlyEditUI</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -52,9 +51,6 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="LevelGenerator.cs" />
-    <None Include="app.config" />
-      <SubType>Form</SubType>
-    </Compile>
     <None Include="Settings.cs" />
     <Compile Include="Forms\Form1.cs">
       <SubType>Form</SubType>
@@ -95,6 +91,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\locked.png" />
