--- a/FlyGameProjects/FlyGame/FlyGame.vcxproj
+++ b/FlyGameProjects/FlyGame/FlyGame.vcxproj
@@ -72,7 +72,7 @@
     <IntDir>$(SolutionDir)..\WorkingDir\AssemblyFiles\$(ProjectName)\x86\Debug\</IntDir>
     <TargetName>$(ProjectName)x86D</TargetName>
     <IncludePath>$(IncludePath);$(SolutionDir)..\Dependencies\Include</IncludePath>
-    <LibraryPath>$(LibraryPath);$(SolutionDir)..\Dependencies\Lib\D3DX11\x86\;$(SolutionDir)..\Dependencies\Lib\Python\x86\;$(OutDir)</LibraryPath>
+    <LibraryPath>$(LibraryPath);$(SolutionDir)..\Dependencies\Lib\D3DX11\x86\;$(SolutionDir)..\Dependencies\Lib\Lua\;$(OutDir)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
