--- a/FlyGameProjects/FlyGame/FlyGame.vcxproj
+++ b/FlyGameProjects/FlyGame/FlyGame.vcxproj
@@ -168,20 +168,27 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="FlyGame.cpp" />
+    <ClCompile Include="GameObjects\FlyPickup.cpp" />
     <ClCompile Include="GameObjects\FlyPlayer.cpp" />
+    <ClCompile Include="GameObjects\PauseMenu.cpp" />
     <ClCompile Include="States\FlyEditor.cpp" />
     <ClCompile Include="States\FlyLevel.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="States\FlyMenu.cpp" />
+    <ClCompile Include="WindCollision.cpp" />
+    <ClCompile Include="WindEmiter.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FlyGame.h" />
     <ClInclude Include="GameObjects\FlyPickup.h" />
+    <ClInclude Include="GameObjects\PauseMenu.h" />
     <ClInclude Include="States\FlyState_Editor.h" />
     <ClInclude Include="States\FlyState_Level.h" />
     <ClInclude Include="GameObjects\FlyPlayer.h" />
     <ClInclude Include="States\FlyState_Menu.h" />
     <ClInclude Include="States\IFlySystemState.h" />
+    <ClInclude Include="WindCollision.h" />
+    <ClInclude Include="WindEmiter.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
