--- a/FlyGameProjects/FlyGame/FlyGame.vcxproj
+++ b/FlyGameProjects/FlyGame/FlyGame.vcxproj
@@ -168,23 +168,25 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="FlyGame.cpp" />
+    <ClCompile Include="GameObjects\EnergyPickup.cpp" />
     <ClCompile Include="GameObjects\FlyPickup.cpp" />
     <ClCompile Include="GameObjects\FlyPlayer.cpp" />
     <ClCompile Include="GameObjects\PauseMenu.cpp" />
-    <ClCompile Include="States\FlyEditor.cpp" />
     <ClCompile Include="States\FlyLevel.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="States\FlyLevel_Importer.cpp" />
+    <ClCompile Include="States\FlyLevel_Input.cpp" />
     <ClCompile Include="States\FlyMenu.cpp" />
     <ClCompile Include="WindCollision.cpp" />
     <ClCompile Include="WindEmiter.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FlyGame.h" />
+    <ClInclude Include="GameObjects\EnergyPickup.h" />
     <ClInclude Include="GameObjects\FlyPickup.h" />
     <ClInclude Include="GameObjects\PauseMenu.h" />
-    <ClInclude Include="States\FlyState_Editor.h" />
     <ClInclude Include="States\FlyState_Level.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
     </ClInclude>
